# deepstream_app

./: .gitignore  CMakeLists.txt  README.md  run.sh
apps/: CMakeLists.txt
apps/detection_deepstream/: CMakeLists.txt  config.json  detection_deepstream.cpp
apps/yolov5_deepstream/: CMakeLists.txt  config.json  yolov5_deepstream.cpp
models/yolov5s/: config_infer_primary.txt
models/yolov7/: config_infer_primary.txt
models/yolov8/: config_infer_primary.txt
scripts/: build_parser.sh  run.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/common/: create_osd.hpp  create_primary_gie.hpp  create_sink.hpp  create_source.hpp  create_tiler.hpp
src/common/src/: create_osd.cpp  create_primary_gie.cpp  create_sink.cpp  create_source.cpp  create_tiler.cpp
src/config/: CMakeLists.txt
src/config/include/config/: config.hpp
src/config/src/: config.cpp
src/ds_common/src/: deepstream_sink_bin.c  deepstream_source_bin.c
src/libraries/: CMakeLists.txt
src/libraries/cuda/: CMakeLists.txt
src/libraries/gstreammer/: CMakeLists.txt
src/libraries/jsonlib/: CMakeLists.txt
src/libraries/nvds_common/: CMakeLists.txt
src/libraries/nvds_common/include/: deepstream_sources.h
src/libraries/nvds_common/src/: deepstream_c2d_msg_util.cpp
src/libraries/nvdslib/: CMakeLists.txt
src/libraries/opencv/: CMakeLists.txt
src/libraries/spdlog/: CMakeLists.txt
src/parser/: CMakeLists.txt
src/parser/yolov5_parser/: CMakeLists.txt  Makefile
src/utils/: CMakeLists.txt
src/utils/include/utils/: call_bus.hpp
src/utils/src/: bus_call.cpp
